Picture on mobile now visible. Grammar fixes. Flipping crash fixed in chrome.

--- a/style.css
+++ b/style.css
@@ -104,9 +104,9 @@ canvas {
 
 .miniBox:hover,
 .box:hover,
-.fab:hover {
+.left-panel .fab:hover,
+.foot-right .fab:hover {
   position: relative;
-
   transform: rotateY(180deg);
   transition: all 0.6s ease-in-out 111ms;
   transform-style: preserve-3d;
@@ -326,8 +326,12 @@ p.bold {
     top: 10px;
   }
 
+  #canvas1 {
+    padding-bottom: 120px;
+  }
+
   .box {
-    height: 120px;
+    height: 115px;
   }
 
   .foot-left {
@@ -339,11 +343,15 @@ p.bold {
   }
 
   img {
-    height: 120px;
+    height: 115px;
   }
 
   .madeIn {
     display: none;
+  }
+
+  footer {
+    background-color: black;
   }
 
   .foot-container {
@@ -366,11 +374,11 @@ p.bold {
 @media screen and (min-width: 1920px) {
   :root {
     --side-pnl-size: 10rem;
-    --flip-box-height: 289px;
-    --flip-box-width: 289px;
+    --flip-box-height: 277px;
+    --flip-box-width: 277px;
   }
 
   .box {
-    font-size: 2.2rem;
+    font-size: 2rem;
   }
 }
